# fancontrol

./: .gitignore  .pylintrc  Dockerfile  README.md  config.yaml  config.yaml.example  docker-compose.yaml  flake.nix  pyproject.toml
.github/workflows/: codeql.yml  docker-publish.yml  stale.yml
fancontrol/: fancontrol.py  logging_setup.py  watchdog.py
